@@ -465,6 +465,8 @@
            of a distributed WATO setup
     * FIX: avoid Python exception for invalid parameters even in debug mode
     * FIX: check_ldap: Removed duplicate "-H" definition
+    * FIX: Fixed some output encoding problem in snapshot restore / deletion code
+    * FIX: Improved user provided variable validation in snapshot handling code
 
     Event Console:
     * FIX: apply rewriting of application/hostname also when cancelling events
